# lean-graph-benchmarking

./: .gitignore  README.md  bug-search.txt  bug.txt  generate-topsort-graph.py  results-reachable.csv  results-topsort.csv  run-benchmarks.py
haskell/: .gitignore  Main.hs  README.md  haskell-benchmark.cabal  hello-world.hs
haskell/res/: 20K-1M0.topsort.txt  20K-1M1.topsort.txt  20K-1M2.topsort.txt  20K-1M3.topsort.txt  20K-1M4.topsort.txt  20K-4M0.topsort.txt  20K-4M1.topsort.txt  20K-4M2.topsort.txt  20K-4M3.topsort.txt  20K-4M4.topsort.txt  20K-7M0.topsort.txt  20K-7M1.topsort.txt  20K-7M2.topsort.txt  20K-7M3.topsort.txt  20K-7M4.topsort.txt  2K-1M0.topsort.txt  2K-1M1.topsort.txt  2K-1M2.topsort.txt  2K-1M3.topsort.txt  2K-1M4.topsort.txt  2K-4M0.topsort.txt  2K-4M1.topsort.txt  2K-4M2.topsort.txt  2K-4M3.topsort.txt  2K-4M4.topsort.txt  30K-7M0.topsort.txt  30K-7M1.topsort.txt  30K-7M2.topsort.txt  30K-7M3.topsort.txt  30K-7M4.topsort.txt  email-EuAll.reachable.txt  web-BerkStan.reachable.txt  web-NotreDame.reachable.txt  web-Stanford.reachable.txt
lean/: Benchmark.lean  README.md  build.sh  leanpkg.toml  test.lean
lean/res/: 20K-1M0.topsort.txt  20K-1M1.topsort.txt  20K-1M2.topsort.txt  20K-1M3.topsort.txt  20K-1M4.topsort.txt  20K-4M0.topsort.txt  20K-4M1.topsort.txt  20K-4M2.topsort.txt  20K-4M3.topsort.txt  20K-4M4.topsort.txt  20K-7M0.topsort.txt  20K-7M1.topsort.txt  20K-7M2.topsort.txt  20K-7M3.topsort.txt  20K-7M4.topsort.txt  2K-1M0.topsort.txt  2K-1M1.topsort.txt  2K-1M2.topsort.txt  2K-1M3.topsort.txt  (+15 more)
stanford-networks/: SOURCE.txt
